k8s/base/deployment.yaml
---
# Source: unifi/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    helm.sh/chart: unifi-1.10.8
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: "v8.4.62"
    link.argocd.argoproj.io/external-link: https://unifi.lemur-lake.ts.net
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
      app.kubernetes.io/instance: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/instance: unifi
    spec:
      containers:
      - name: unifi
        image: "ghcr.io/jacobalberty/unifi-docker:v8.4.62"
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 8443
          protocol: TCP
        - name: controller
          containerPort: 8080
          protocol: TCP
        - name: discovery
          containerPort: 10001
          protocol: UDP
        - name: stun
          containerPort: 3478
          protocol: UDP
        - name: syslog
          containerPort: 5514
          protocol: UDP
        - name: captive-http
          containerPort: 8880
          protocol: TCP
        - name: captive-https
          containerPort: 8843
          protocol: TCP
        - name: speedtest
          containerPort: 6789
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - SETFCAP
        livenessProbe:
          httpGet:
            path: /status
            port: https
            scheme: HTTPS
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status
            port: https
            scheme: HTTPS
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /status
            port: https
            scheme: HTTPS
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 60
        volumeMounts:
        - mountPath: /unifi/data
          name: unifi-data
          subPath: data
        - mountPath: /unifi/log
          name: unifi-data
          subPath: log
        - mountPath: /unifi/cert
          name: unifi-data
          subPath: cert
        - mountPath: /unifi/init.d
          name: unifi-data
          subPath: init.d
        resources: {}
      volumes:
      - name: unifi-data
        persistentVolumeClaim:
          claimName: unifi
