k8s/base/stun-svc.yaml
---
# Source: unifi/templates/stun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-stun
  labels:
    helm.sh/chart: unifi-1.10.8
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/version: "v8.4.62"
spec:
  type: NodePort
  ports:
  - port: 3478
    targetPort: stun
    protocol: UDP
    name: stun
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi
